--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/botswana-harvard/django-crypto-fields.git@develop#egg=django_crypto_fields
+git+https://github.com/botswana-harvard/django-crypto-fields.git@0.1.14#egg=django_crypto_fields
 git+https://github.com/botswana-harvard/edc-action-item.git@develop#egg=edc_action_item
 git+https://github.com/botswana-harvard/edc-base.git@develop#egg=edc_base
 git+https://github.com/botswana-harvard/edc-constants.git@develop#egg=edc_constants
